# Rocksmith-Discord-Rich-Presence

./: .gitignore  CMakeLists.txt  LICENSE.md  Main.cpp  README.md  RocksmithRPC.cpp  RocksmithRPC.h
